--- a/Data-Science-Alura/Dados1/sandstorm.ipynb
+++ b/Data-Science-Alura/Dados1/sandstorm.ipynb
@@ -2,6 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1 curso"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
@@ -1260,7 +1269,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x1db9e157110>"
+       "<seaborn.axisgrid.FacetGrid at 0x2858d014b90>"
       ]
      },
      "execution_count": 27,
@@ -1987,20 +1996,20 @@
     {
      "data": {
       "text/plain": [
-       "{'whiskers': [<matplotlib.lines.Line2D at 0x1dba242d6d0>,\n",
-       "  <matplotlib.lines.Line2D at 0x1dba242d810>,\n",
-       "  <matplotlib.lines.Line2D at 0x1dba242df90>,\n",
-       "  <matplotlib.lines.Line2D at 0x1dba242e0d0>],\n",
-       " 'caps': [<matplotlib.lines.Line2D at 0x1dba242d950>,\n",
-       "  <matplotlib.lines.Line2D at 0x1dba242da90>,\n",
-       "  <matplotlib.lines.Line2D at 0x1dba242e210>,\n",
-       "  <matplotlib.lines.Line2D at 0x1dba242e350>],\n",
-       " 'boxes': [<matplotlib.lines.Line2D at 0x1dba2283c50>,\n",
-       "  <matplotlib.lines.Line2D at 0x1dba242de50>],\n",
-       " 'medians': [<matplotlib.lines.Line2D at 0x1dba242dbd0>,\n",
-       "  <matplotlib.lines.Line2D at 0x1dba242e490>],\n",
-       " 'fliers': [<matplotlib.lines.Line2D at 0x1dba242dd10>,\n",
-       "  <matplotlib.lines.Line2D at 0x1dba242e5d0>],\n",
+       "{'whiskers': [<matplotlib.lines.Line2D at 0x285910dee90>,\n",
+       "  <matplotlib.lines.Line2D at 0x285910defd0>,\n",
+       "  <matplotlib.lines.Line2D at 0x285910df750>,\n",
+       "  <matplotlib.lines.Line2D at 0x285910df890>],\n",
+       " 'caps': [<matplotlib.lines.Line2D at 0x285910df110>,\n",
+       "  <matplotlib.lines.Line2D at 0x285910df250>,\n",
+       "  <matplotlib.lines.Line2D at 0x285910df9d0>,\n",
+       "  <matplotlib.lines.Line2D at 0x285910dfb10>],\n",
+       " 'boxes': [<matplotlib.lines.Line2D at 0x28590cd51d0>,\n",
+       "  <matplotlib.lines.Line2D at 0x285910df610>],\n",
+       " 'medians': [<matplotlib.lines.Line2D at 0x285910df390>,\n",
+       "  <matplotlib.lines.Line2D at 0x285910dfc50>],\n",
+       " 'fliers': [<matplotlib.lines.Line2D at 0x285910df4d0>,\n",
+       "  <matplotlib.lines.Line2D at 0x285910dfd90>],\n",
        " 'means': []}"
       ]
      },
@@ -2025,14 +2034,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Xno\\AppData\\Local\\Temp\\ipykernel_20728\\2830649458.py:1: FutureWarning: \n",
+      "C:\\Users\\Xno\\AppData\\Local\\Temp\\ipykernel_20020\\2830649458.py:1: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -2045,7 +2054,7 @@
        "<Axes: xlabel='filmeId', ylabel='nota'>"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2069,7 +2078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -2194,7 +2203,7 @@
        "[3446 rows x 3 columns]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
